--- a/BookStore/Views/Search/Index.cshtml
+++ b/BookStore/Views/Search/Index.cshtml
@@ -1,68 +1,36 @@
 ﻿@model IEnumerable<BookStore.Models.Product>
-@using System.Globalization;
+
 @{
     ViewBag.Title = "Tìm kiếm sản phẩm | Nhà sách AC";
-    Layout = "~/Views/Shared/_MainLayout.cshtml";
-    CultureInfo ci = new CultureInfo("vi-VN");
+    Layout = "~/Views/MyShared/MainLayout.cshtml";
+    
 }
 
-@*<h2>Index</h2>
-
-
-    @using (Html.BeginForm("Index", "Search", FormMethod.Get, new { @style = "margin:7px" }))
-    {
-        <input name="key" placeholder="Nhập từ khoá" type="text" />
-        <input name="costBegin" placeholder="Giá bắt đầu" type="number" />
-        <input name="costEnd" placeholder="Giá kết thúc" type="number" />
-        <button type="submit">Tìm</button>
-    }*@
 <section>
-    <div class="container">
+    <div class="container" style="margin-top:150px">
         <div class="row">
-            @Html.Partial("SideSearch")
-            <div id="search_result" class="col-lg-9 padding-right">
-                @foreach (var item in Model)
-                {
-                    <div class="col-lg-3">
-                        <div class="product-image-wrapper">
-                            <div class="single-products">
-                                <div class="productinfo text-center" style="height:230px">
-                                    @if (string.IsNullOrEmpty(item.AvatarImage))
-                                    {
-                                        <img style="height:150px;width:100%;object-fit:contain"
-                                             src="/Assets/images/home/default-image.png" />
-                                    }
-                                    else
-                                    {
-                                        <img style="height:150px;width:100%;object-fit:contain"
-                                             src="@Url.Content(item.AvatarImage)"
-                                             onerror="if (this.src != '/Assets/images/home/default-image.png') this.src = '/Assets/images/home/default-image.png';"/>
-                                    }
-                                    <h2>@(item.Price.ToString("0,0.###", ci)) đ</h2>
-                                    <p class="shorten-name"><b>@item.Name</b></p>
-                                </div>
-                                <div class="product-overlay">
-                                    <div class="overlay-content">
-                                        <h2>@(item.Price.ToString("0,0.###", ci)) đ</h2>
-                                        <p><a href="/Products/Single?id=@item.ID">@item.Name</a></p>
-                                        <a href="#" class="btn btn-default add-to-cart" onclick="updateCart('add',@item.ID, event)">
-                                            <p hidden>@item.ID</p>
-                                            <i class="fa fa-shopping-cart"></i>
-                                            Thêm vào giỏ
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                }
+            <div class="col-lg-3 side-menu-holder">
+                <div class="left-sidebar side-menu">
+                    <label class="check-container" for="is_correctly">
+                        Tìm chính xác <input class="pull-right" id="is_correctly" type="checkbox" />
+                    </label>
+                    
+                    @Html.Partial("SideSearch")
+
+                </div><!--/price-range-->
+            </div>
+           
+
+            <div id="search_result" class="left-ads-display col-md-9">
+                @Html.Partial("ItemPartial")
+
             </div>
         </div>
     </div>
 </section>
 @*<link href="~/Assets/css/bootstrap.min.css" rel="stylesheet">*@
-<link href="~/Assets/css/price-range.css" rel="stylesheet">
-<script src="~/Assets/js/price-range.js" type="text/javascript"></script>
+@*<link href="~/Assets/css/price-range.css" rel="stylesheet">
+<script src="~/Assets/js/price-range.js" type="text/javascript"></script>*@
 @*<script src="~/Assets/js/jquery-3.1.1.min.js" type="text/javascript"></script>*@
 
 
@@ -73,19 +41,28 @@
         var text = $('#search_box').val();
         var author = $('#ddl_author').val();
         var category = $('#ddl_category').val();
-        var costBegin = $('#ex2').val().split(',')[0];
-        var costEnd = $('#ex2').val().split(',')[1]; //$('#cost_end').val()
+        //var costBegin = 0;//$('#ex2').val().split(',')[0];
+        //var costEnd = 2000000; //$('#ex2').val().split(',')[1]; //$('#cost_end').val()
+
+
+        var strUrl = "";
+        if (document.getElementById('is_correctly').checked) {
+            strUrl = "/Search/SearchCorrectly/";
+        }
+        else {
+            strUrl = "/Search/Search/";
+        }
 
         $.ajax({// lấy dữ liệu từ link này
-            url: '/Search/Search/',
+            url: strUrl,
             type: 'GET',
-            dataType: 'json',// kiểu dữ liệu: json
+            dataType: 'text',// kiểu dữ liệu: json
             data: {
                 "key": text,
                 "authorId": author,
                 "categoryId": category,
-                "costBegin": costBegin,
-                "costEnd": costEnd,
+                "costBegin": window.priceMin,
+                "costEnd": window.priceMax,
             },
             success: function (data) {// lấy dữ liệu thành công
                 if (data == null) {
@@ -93,15 +70,10 @@
                     return;
                 }
 
-                //var items = '';
                 // đổ dữ liệu ra page
                 $('#search_result').html("");
-                $.each(data, function (i, item) {
-                    $('#search_result').append(genItem(item));
-                    //items += ;
-                });
-
-                //$('#search_result').html(items);
+                $('#search_result').append(data);
+                $('.product-chr-info .caption h4').ellipsis();
             },
             error: function (err) {// lỗi
                 if (err.responseText)
@@ -112,41 +84,5 @@
                 }
             }
         });
-
     }
-
-    // tạo ra 1 item kết quả search (1 item cuốn sách)
-    function genItem(item) {
-        var content =
-            '<div class="col-lg-3">\
-                <div class="product-image-wrapper">\
-                    <div class="single-products">\
-                        <div class="productinfo text-center" style="height:230px">'
-
-        if (!item.AvatarImage)
-            content += '<img style="height:150px;width:100%;object-fit:contain" src="/Assets/images/home/default-image.png" alt="Không có hình" />'
-        else
-            content += '<img style="height:150px;width:100%;object-fit:contain" onerror="' + "if (this.src != '/Assets/images/home/default-image.png') this.src = '/Assets/images/home/default-image.png';" + '" src="' + item.AvatarImage.replace("~", "") + '" />'
-
-        content +=
-            '<h2>' + (item.Price).toLocaleString() + ' đ</h2>\
-                            <p><b>' + item.Name + '</b></p>\
-                        </div>'
-            +
-            '<div class="product-overlay">\
-                            <div class="overlay-content">\
-                                <h2>' + (item.Price).toLocaleString() + ' đ</h2>\
-                                <p><a href="/Products/Single?id='+ item.ID + '">' + item.Name + '</a></p>\
-                                <a href="#" class="btn btn-default add-to-cart" onclick="updateCart(' + "'add'," + item.ID + ', event)">\
-                                    <i class="fa fa-shopping-cart"></i>\
-                                    Thêm vào giỏ\
-                                </a>\
-                            </div>\
-                        </div>\
-                    </div>\
-                </div>\
-            </div>'
-        return content;
-    };
-
 </script>
