--- a/BookStore/Views/Shared/ItemPartial.cshtml
+++ b/BookStore/Views/Shared/ItemPartial.cshtml
@@ -5,7 +5,7 @@
 }
 @foreach (var item in Model)
 {
-    <div class="col-md-3 product-men" style="margin-bottom:20px">
+    <div class="col-md-3 product-men">
         <div class="product-chr-info chr"> <a href="/Products/Single/@item.ID">
             <div class="thumbnail">
                 @if (string.IsNullOrEmpty(item.AvatarImage))
