--- a/BookStore/Views/MyShared/MainLayout.cshtml
+++ b/BookStore/Views/MyShared/MainLayout.cshtml
@@ -32,6 +32,8 @@
     @*<link href="~/Assets/css/bootstrap.min.css" rel="stylesheet">*@
     <link href="~/Assets/css/override-navbar.css" rel="stylesheet" media="all">
 
+    
+
     <!-- //Custom Theme files -->
     <!-- online-fonts -->
     <!-- logo -->
@@ -60,7 +62,7 @@
     <div id="staplesbmincart" class="minicart" hidden="hidden">
         @Html.Action("CartPartial", "Cart")
     </div>
-
+    <script src="~/Assets/js/jquery-3.1.1.min.js"></script>
     <script src="~/Assets/js/main1.js"></script>
     <script src="~/Assets/js/scrolling-nav.js"></script>
     <script src="~/Assets/js/bootstrap.js"></script>
@@ -69,9 +71,8 @@
 
     <!--footer start-->
     <footer class="cpy-right">
-        <p>
-            © 2018 Chronicle. All rights reserved | Design by
-            <a href="http://w3layouts.com"> W3layouts.</a>
+        <p style="color:white !important; font-weight:bold; text-transform:uppercase">
+            Nhóm 5 | Đồ án quản lý nhà sách
         </p>
     </footer>
     <!--footer end-->
