--- a/BookStore/Views/Contact/Index - Copy.cshtml
+++ b/BookStore/Views/Contact/Index - Copy.cshtml
@@ -1,49 +1,29 @@
-﻿@using System.Globalization;
+﻿
 @{
     ViewBag.Title = "Liên hệ với Nhà sách AC";
-    Layout = "~/Views/MyShared/MainLayout.cshtml";
+    Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
-
 <style>
     #map {
         height: 400px;
         width: 100%;
-        outline: 2.5px rgba(0, 0, 0, 0.5) solid;
-        margin: 20px auto;
-    }
-    .myTitle {
-        margin: 15px 0 15px 0;
-        font-size: 25px;
-        color: #808080;
-        font-weight: bold;
-        text-transform: uppercase;
-        font-family: 'Merriweather Sans', sans-serif;
-        /*text-shadow: 1px 1px #000;*/
-    }
-    p {
-        color: black !important;
-    }
-    .bg-black {
-        background-color: black;
+        margin-bottom: 20px;
     }
 </style>
-
-<div style="margin-top: 50px"></div>
-
 <div id="contact-page" class="container">
-    <div class="bg ">
+    <div class="bg">
         <div class="row" style="margin-top:30px">
-            <div class="col-lg-10 col-lg-offset-1">
-                <h2 class="myTitle text-center">Địa chỉ</h2>
+            <div class="col-lg-12">
+                <h2 class="title text-center">Liên hệ với <strong>chúng tôi</strong></h2>
                 <div id="map"></div>
             </div>
         </div>
-        <div class="row" style="margin-top: 30px;">
-            <div class="col-lg-6 col-lg-offset-1">
-                <div class="col-lg-12">
-                    <h2 class="myTitle text-center">Liên lạc</h2>
+        <div class="row">
+            <div class="col-lg-8">
+                <div class="contact-form">
+                    <h2 class="title text-center" style="margin-top:5px">Liên lạc</h2>
                     <div class="status alert alert-success" style="display: none"></div>
-                    <form id="main-contact-form" class="row" name="contact-form" method="post">
+                    <form id="main-contact-form" class="contact-form row" name="contact-form" method="post">
                         <div class="form-group col-md-6">
                             <input type="text" name="name" class="form-control" required="required" placeholder="Tên">
                         </div>
@@ -57,30 +37,40 @@
                             <textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="Bạn muốn nhắn nhủ gì với chúng tôi"></textarea>
                         </div>
                         <div class="form-group col-md-12">
-                            <input type="submit" name="submit" class="btn btn-primary col-lg-12" style="font-weight:bolder" value="GỬI" onclick="alert('Xin cảm ơn bạn đã liên hệ với chúng tôi. Chúng tôi sẽ có phản hồi sớm nhất qua hộp thư điện tử.')">
+                            <input type="submit" name="submit" class="btn btn-primary pull-right" value="Gửi" onclick="alert('Xin cảm ơn bạn đã liên hệ với chúng tôi. Chúng tôi sẽ có phản hồi sớm nhất qua hộp thư điện tử.')">
                         </div>
                     </form>
                 </div>
             </div>
             <div class="col-lg-4">
-                <h2 class="myTitle text-center">
-                    Liên kết
-                </h2>
-                <address>
-                    <p style="text-align:center">
-                        <a target="_blank" href="//se.uit.edu.vn/">
-                            <img style="background-color:#14223c;object-fit:contain;width:50%;height:50%" src="//se.uit.edu.vn/templates/mimety/images/logo.png" />
+                <div class="contact-info">
+                    <div class="social-networks">
+                        <h2 class="title text-center"
+                            style="margin-top:5px;margin-bottom:0px">
+                            Liên kết
+                        </h2>
+                        <a target="_blank" href="https://www.uit.edu.vn">
+                            <img style="object-fit:contain;width:100%;height:100%" src="https://www.uit.edu.vn/sites/vi/files/banner.png" />
                         </a>
-                        <br /><br /><br />Đồ án Quản lý nhà sách
-                        <br />Nhóm 5
-                        <br />Nền tảng: ASP.NET MVC5
-                    </p>
-                </address>
+                    </div>
+                    <address>
+                        <p style="text-align:center">
+                            <a target="_blank" href="//se.uit.edu.vn/">Khoa Công nghệ Phần mềm</a>
+                            <br />
+                            <a target="_blank" href="//se.uit.edu.vn/">
+                                <img style="background-color:#14223c;object-fit:contain;width:50%;height:50%" src="//se.uit.edu.vn/templates/mimety/images/logo.png" />
+                            </a>
+                            <br /><br /><br />Đồ án Quản lý nhà sách
+                            <br />Nhóm 5
+                            <br />Nền tảng: ASP.NET MVC5
+                        </p>
+                    </address>
+                </div>
             </div>
         </div>
     </div>
 </div><!--/#contact-page-->
-<div style="margin-top: 100px"></div>
+
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
 <script type="text/javascript" src="~/Assets/js/gmaps.js"></script>
 
