--- a/BookStore/Views/Cart/Index.cshtml
+++ b/BookStore/Views/Cart/Index.cshtml
@@ -85,6 +85,7 @@
     </div>
 </section> <!--/#cart_items-->
 <div style="margin-top:100px"></div>
+@*<script src="~/Assets/js/jquery.js"></script>*@
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
 <script type="text/javascript" src="~/Assets/js/gmaps.js"></script>
 
@@ -109,7 +110,7 @@
 
     $(document).ready(function () {
         // hàm này ở header, gọi để populate cart ở nửa page bên trái
-        getCart("main");
+        //getCart("main");
 
         // populate dữ liệu khách hàng, trong trường hợp khách hàng đã nhập thông tin trước đó rồi
         populateCheckoutInfo();
